--- a/committee.html
+++ b/committee.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>TENCON 2019 | Committee </title><!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-39379599-10');
-</script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-39379599-10');
+    </script>
 
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -36,8 +39,9 @@
             padding: 20px;
             box-shadow: #ffda15 2px 2px;
             margin-bottom: 20px;
-
             height: 200px;
+            width: 170px;
+            object-fit: cover;
         }
 
         li>b {
@@ -342,47 +346,195 @@
                 <div class="content-column col-lg-12 col-md-8 col-sm-12 col-xs-12">
                     <div class="inner-column">
                         <div class="feature-info-block">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <ul>
+                            <ul>
+                                <div class="row">
+                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
                                         <li>
-                                            <!-- <img src="./images/kush.jpg" alt="" class="organizer"><br> -->
-                                            <b>Honorary Chair</b><br />
+                                            <b>Honorary Chair</b><br>
+                                            <br>
+                                            <img src="images/committee/akinori.jpeg" alt="" class="organizer"><br>
                                             Akinori Nishihara, 2018-2019<br />
-                                            <i>IEEE Region 10 Director, Japan</i></li>
-                                        <li><b>General Chair</b><br />
-                                            K.R. Suresh Nair,<i>CTO-NeST Group</i><br />
-                                        </li>
-                                        <li><b>General Co-Chairs</b><br />
-                                            S.M. Sameer, <i>NIT, Calicut</i><br>
-                                            Sarada Jayakrishnan, <i>Terumo Penpol, Trivandrum</i></li>
-                                    </ul>
-                                    <ul>
-                                        <li><b>Organizing Chairs</b><br />
-                                            Sasi P. M., <i>CDAC Trivandrum</i><br />
-                                            Mini Ulanat, <i>CUSAT Kochi</i><br />
-                                            Shahim Baker, <i>Baker & Grey, Kochi</i><br /></li>
-                                    </ul>
+                                            <i>IEEE Region 10 Director, Japan</i>
 
+                                        </li>
+                                    </div>
+                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-">
+                                        <li><b>General Chair</b><br /><br>
 
+                                            <img src="images/committee/suresh-nair.jpg" alt="" class="organizer"><br>
+                                            K.R. Suresh Nair,<br><i>CTO-NeST Group</i><br />
 
-                                    <ul>
-                                        <li><b>Technical Program Chairs</b><br />
-                                            Lillykutty Jacob, <i>NIT Calicut</i><br />
-                                            Vikram M Gadre, <i>IIT Bombay</i><br />
-                                            N Venkatesh, <i>Redpine Signals Inc. Hyderabad</i></li>
-                                        <li><b>Publication Chair</b><br>
-                                            Suresh K., <i>CET, Trivandrum</i><br>
                                         </li>
-                                        <li><b>Finance Chair</b><br>
-                                            Jyothi Ramaswamy, <i>TCS, Trivandrum</i><br>
-                                        </li>
-                                        <li><b>Publicity Chair</b><br>
-                                            Sabarinath G Pillai, <i>SJCE, Palai</i><br>
-                                        </li>
-                                    </ul>
+                                    </div>
                                 </div>
-                            </div>
+
+
+                                <li><b>General Co-Chairs</b><br /><br>
+                                    <div class="row">
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                            <img src="images/committee/Sameer-SM.jpg" alt="" class="organizer">
+                                            <p> S.M. Sameer, <i>NIT, Calicut</i><br></p>
+                                        </div>
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                            <img src="images/committee/sarada.jpg" alt="" class="organizer">
+                                            <p> Sarada Jayakrishnan, <i>Terumo Penpol, Trivandrum</i></p>
+                                        </div>
+
+                                </li>
+                            </ul>
+                            <ul>
+                                <li><b>Organizing Chairs</b><br><br>
+
+                                    <div class="row">
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                            <img src="images/committee/Sasi-PM.jpg" alt="" class="organizer">
+                                            <p> Sasi P. M., <i>CDAC Trivandrum</i></p>
+                                        </div>
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                            <img src="images/committee/kush.jpg" alt="" class="organizer">
+                                            <p> Mini Ulanat, <i>CUSAT Kochi</i><br /></p>
+                                        </div>
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                            <img src="images/committee/kush.jpg" alt="" class="organizer">
+                                            <p> Shahim Baker, <i>Baker & Grey, Kochi</i><br /></p>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li><b>Technical Program Chairs</b><br><br>
+
+                                    <div class="row">
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                            <img src="images/committee/Lillykutty.jpg" alt="" class="organizer">
+                                            <p> Lillykutty Jacob, <i>NIT Calicut</i></p>
+                                        </div>
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                            <img src="images/committee/" alt="" class="organizer">
+                                            <p> Vikram M Gadre, <i>IIT Bombay</i></p>
+                                        </div>
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                            <img src="images/committee/N-Venkatesh.jpg" alt="" class="organizer">
+                                            <p> N Venkatesh, <i>Redpine Signals Inc. Hyderabad</i></p>
+                                        </div>
+                                    </div>
+                            </ul>
+
+                            <ul>
+                                <div class="row">
+                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                        <li><b>Publication Chair</b><br><br>
+                                            <img src="images/committee/" alt="" class="organizer">
+                                            <p>Suresh K., <i>CET, Trivandrum</i><br></p>
+                                        </li>
+                                    </div>
+
+                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                        <li><b>Finance Chair</b><br><br>
+                                            <img src="images/committee/Jyothi-Ramaswamy.jpg" alt="" class="organizer">
+                                            <p>Jyothi Ramaswamy, <i>TCS, Trivandrum</i><br></p>
+                                        </li>
+                                    </div>
+                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                        <li><b>Tutorial Chair</b><br><br>
+                                            <img src="images/committee/BijoyJose-pic.jpg" alt="" class="organizer">
+                                            <p>Bijoy Antony Jose, CUSAT<br></p>
+                                        </li>
+                                    </div>
+
+                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                        <li><b>Sponsorship Chair</b><br><br>
+                                            <img src="images/committee/Sabarinath-G-Pillai.jpg" alt=""
+                                                class="organizer">
+                                            <p>Sabarinath G Pillai, <i>SJCE, Palai</i><br></p>
+                                        </li>
+                                    </div>
+                                </div>
+
+                                <!-- Humanitarian -->
+                                <li><b>Humanitarian Track</b><br><br>
+                                    <div class="row">
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+
+                                            <img src="images/committee/Amarnath-Raja.jpg" alt="" class="organizer">
+                                            <p>Amarnath Raja, InApp<br></p>
+
+                                        </div>
+
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                            <img src="images/committee/Satish-Babu.jpg" alt="" class="organizer">
+                                            <p>Satish Babu, InApp<br></p>
+
+                                        </div>
+
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                            <img src="images/committee/VK-Damodaran.jpg" alt="" class="organizer">
+                                            <p>VK Damodaran, Life Senior Member, IEEE<br></p>
+
+                                        </div>
+                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                            <img src="images/committee/-G-Pillai.jpg" alt="" class="organizer">
+                                            <p>Akila Surendran, NISH<br></p>
+
+                                        </div>
+                                    </div>
+                                </li>
+
+
+
+                                <div class="row">
+                                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
+                                        <li><b>Industry Track Chairs</b><br><br>
+                                            <img src="images/committee/Amarnath-Raja.jpg" alt="" class="organizer">
+                                            <p>Amarnath Raja, InApp</i><br></p>
+                                        </li>
+                                    </div>
+
+                                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
+                                        <br><br>
+                                        <img src="images/committee/Jayakrishnan.jpg" alt="" class="organizer">
+                                        <p>MC Jayakrishnan, InApp<br></p>
+
+                                    </div>
+                                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
+                                        <li><b>Registration Chairs</b><br><br>
+                                            <img src="images/committee/Nandan.jpg" alt="" class="organizer">
+                                            <p>Nandan S, LBSCEW, Trivandrum<br></p>
+                                        </li>
+                                    </div>
+
+                                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
+                                        <br><br>
+                                        <img src="images/committee/-G-Pillai.jpg" alt="" class="organizer">
+                                        <p>Bijuna Kunju, TKMCE, Kollam<br></p>
+
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                        <li><b>Hospitality Chairs</b><br><br>
+                                            <img src="images/committee/" alt="" class="organizer">
+                                            <p>Thomas Sabu, Neo Green Labs<br></p>
+                                        </li>
+                                    </div>
+
+                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                        <br><br>
+                                        <img src="images/committee/-.jpg" alt="" class="organizer">
+                                        <p>Shankar J, UKFCE, Trivandrum<br></p>
+
+                                    </div>
+                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                        <li><b>Creative Design Chair</b><br><br>
+                                            <img src="images/committee/abey.jpg" alt="" class="organizer">
+                                            <p>Abey Easow Joseph, Entri.app<br></p>
+                                        </li>
+                                    </div>
+                                </div>
+
+
+                            </ul>
                             <div class="row">
                                 <div class="col-lg-6">
                                     <ul>
@@ -443,8 +595,10 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12 text-left">
                         <i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
-                        <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link" style="font-weight: initial;">Research
+                        <a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom
+                            CEC</a>&nbsp;&&nbsp;
+                        <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
+                            style="font-weight: initial;">Research
                             Publishing Services</a>
                     </div><!-- /.col-md-4 -->
 
