--- a/htrack.html
+++ b/htrack.html
@@ -244,7 +244,7 @@
                       (akilas@nish.ac.in)</a><br>
                     <br>   
 
-             <p>Who should attend:<br>
+             <p><b>Who should attend:</b><br>
 
                <font color="#fe9079">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Technologists
                <br>
