added publicity chair and general layout fixes

--- a/committee.html
+++ b/committee.html
@@ -343,7 +343,7 @@
 
 
                 <!--Content Box-->
-                <div class="content-column col-lg-12 col-md-8 col-sm-12 col-xs-12">
+                <div class="content-column col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="inner-column">
                         <div class="feature-info-block">
                             <ul>
@@ -423,22 +423,22 @@
                             <ul>
                                 <div class="row">
                                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                                        <li><b>Publication Chair</b><br><br>
-                                            <img src="images/committee/" alt="" class="organizer">
-                                            <p>Suresh K., <i>CET, Trivandrum</i><br></p>
+                                        <li><b>Finance Chair</b><br><br>
+                                            <img src="images/committee/Jyothi-Ramaswamy.jpg" alt="" class="organizer">
+                                            <p>Jyothi Ramaswamy, <br><i>TCS, Trivandrum</i><br></p>
                                         </li>
                                     </div>
 
                                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                                        <li><b>Finance Chair</b><br><br>
-                                            <img src="images/committee/Jyothi-Ramaswamy.jpg" alt="" class="organizer">
-                                            <p>Jyothi Ramaswamy, <i>TCS, Trivandrum</i><br></p>
+                                        <li><b>Publication Chair</b><br><br>
+                                            <img src="images/committee/" alt="" class="organizer">
+                                            <p>Suresh K., <br><i>CET, Trivandrum</i><br></p>
                                         </li>
                                     </div>
                                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
                                         <li><b>Tutorial Chair</b><br><br>
                                             <img src="images/committee/BijoyJose-pic.jpg" alt="" class="organizer">
-                                            <p>Bijoy Antony Jose, CUSAT<br></p>
+                                            <p>Bijoy Antony Jose, <br>CUSAT<br></p>
                                         </li>
                                     </div>
 
@@ -446,7 +446,7 @@
                                         <li><b>Sponsorship Chair</b><br><br>
                                             <img src="images/committee/Sabarinath-G-Pillai.jpg" alt=""
                                                 class="organizer">
-                                            <p>Sabarinath G Pillai, <i>SJCE, Palai</i><br></p>
+                                            <p>Sabarinath G Pillai, <br><i>SJCE, Palai</i><br></p>
                                         </li>
                                     </div>
                                 </div>
@@ -454,84 +454,106 @@
                                 <!-- Humanitarian -->
                                 <li><b>Humanitarian Track</b><br><br>
                                     <div class="row">
-                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
 
                                             <img src="images/committee/Amarnath-Raja.jpg" alt="" class="organizer">
-                                            <p>Amarnath Raja, InApp<br></p>
+                                            <p>Amarnath Raja,<br> InApp<br></p>
 
                                         </div>
 
-                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                                             <img src="images/committee/Satish-Babu.jpg" alt="" class="organizer">
-                                            <p>Satish Babu, InApp<br></p>
+                                            <p>Satish Babu,<br> InApp<br></p>
 
                                         </div>
 
-                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                                             <img src="images/committee/VK-Damodaran.jpg" alt="" class="organizer">
-                                            <p>VK Damodaran, Life Senior Member, IEEE<br></p>
+                                            <p>VK Damodaran,<br> Life Senior Member, IEEE<br></p>
 
                                         </div>
-                                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                                             <img src="images/committee/-G-Pillai.jpg" alt="" class="organizer">
-                                            <p>Akila Surendran, NISH<br></p>
+                                            <p>Akila Surendran,<br> NISH<br></p>
 
                                         </div>
                                     </div>
                                 </li>
 
-
-
                                 <div class="row">
-                                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
-                                        <li><b>Industry Track Chairs</b><br><br>
+                                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                        <li>
+                                            <b>Industry Track Chairs</b> </li>
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+
                                             <img src="images/committee/Amarnath-Raja.jpg" alt="" class="organizer">
                                             <p>Amarnath Raja, InApp</i><br></p>
-                                        </li>
-                                    </div>
 
-                                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
-                                        <br><br>
-                                        <img src="images/committee/Jayakrishnan.jpg" alt="" class="organizer">
-                                        <p>MC Jayakrishnan, InApp<br></p>
+                                        </div>
+
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+
+                                            <img src="images/committee/Jayakrishnan.jpg" alt="" class="organizer">
+                                            <p>MC Jayakrishnan, InApp<br></p>
+
+                                        </div>
+
 
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
-                                        <li><b>Registration Chairs</b><br><br>
+                                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                        <li><b>Registration Chairs</b></li>
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                             <img src="images/committee/Nandan.jpg" alt="" class="organizer">
                                             <p>Nandan S, LBSCEW, Trivandrum<br></p>
-                                        </li>
-                                    </div>
+                                        </div>
 
-                                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
-                                        <br><br>
-                                        <img src="images/committee/-G-Pillai.jpg" alt="" class="organizer">
-                                        <p>Bijuna Kunju, TKMCE, Kollam<br></p>
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                                            <img src="images/committee/-G-Pillai.jpg" alt="" class="organizer">
+                                            <p>Bijuna Kunju, TKMCE, Kollam<br></p>
+
+                                        </div>
 
                                     </div>
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                                        <li><b>Hospitality Chairs</b><br><br>
+                                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                        <li>
+                                            <b>Hospitality Chairs</b> </li>
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+
                                             <img src="images/committee/" alt="" class="organizer">
                                             <p>Thomas Sabu, Neo Green Labs<br></p>
-                                        </li>
-                                    </div>
 
-                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                                        <br><br>
-                                        <img src="images/committee/-.jpg" alt="" class="organizer">
-                                        <p>Shankar J, UKFCE, Trivandrum<br></p>
+                                        </div>
+
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+
+                                            <img src="images/committee/-.jpg" alt="" class="organizer">
+                                            <p>Shankar J, UKFCE, Trivandrum<br></p>
+
+                                        </div>
+
 
                                     </div>
-                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                                        <li><b>Creative Design Chair</b><br><br>
+                                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                        
+                                       
+
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                                                <li><b>Publicity Chair</b></li>
+                                            <img src="images/committee/sridevshyam.jpg" alt="" class="organizer">
+                                            <p>Sridev Shyam K V, KeyValue Software Systems</p>
+                                        </div>
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                                                <li><b>Creative Design Chair</b></li>
                                             <img src="images/committee/abey.jpg" alt="" class="organizer">
                                             <p>Abey Easow Joseph, Entri.app<br></p>
-                                        </li>
+                                        </div>
+
                                     </div>
                                 </div>
+
 
 
                             </ul>
