--- a/committee.html
+++ b/committee.html
@@ -279,8 +279,10 @@
         <section class="services-style-one">
             <div class="container">
 
+                    <div class="sec-title text-left">
 
-                <h2>International Advisory Committee Members</h2><br>
+                            <h2>International Advisory Committee Members</h2>
+                        </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <ul>
@@ -335,6 +337,7 @@
                         </ul>
                     </div>
                 </div>
+                <hr>
                 <br />
                 <div class="sec-title text-left">
 
