added placeholder image

--- a/committee.html
+++ b/committee.html
@@ -394,11 +394,11 @@
                                             <p> Sasi P. M., <i>CDAC Trivandrum</i></p>
                                         </div>
                                         <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                                            <img src="images/committee/kush.jpg" alt="" class="organizer">
+                                            <img src="images/committee/avatar.png" alt="" class="organizer">
                                             <p> Mini Ulanat, <i>CUSAT Kochi</i><br /></p>
                                         </div>
                                         <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                                            <img src="images/committee/kush.jpg" alt="" class="organizer">
+                                            <img src="images/committee/avatar.png" alt="" class="organizer">
                                             <p> Shahim Baker, <i>Baker & Grey, Kochi</i><br /></p>
                                         </div>
                                     </div>
@@ -413,7 +413,7 @@
                                             <p> Lillykutty Jacob, <i>NIT Calicut</i></p>
                                         </div>
                                         <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                                            <img src="images/committee/" alt="" class="organizer">
+                                            <img src="images/committee/avatar.png" alt="" class="organizer">
                                             <p> Vikram M Gadre, <i>IIT Bombay</i></p>
                                         </div>
                                         <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
@@ -434,7 +434,7 @@
 
                                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
                                         <li><b>Publication Chair</b><br><br>
-                                            <img src="images/committee/" alt="" class="organizer">
+                                            <img src="images/committee/avatar.png" alt="" class="organizer">
                                             <p>Suresh K., <br><i>CET, Trivandrum</i><br></p>
                                         </li>
                                     </div>
@@ -476,7 +476,7 @@
 
                                         </div>
                                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                                            <img src="images/committee/-G-Pillai.jpg" alt="" class="organizer">
+                                            <img src="images/committee/avatar.png" alt="" class="organizer">
                                             <p>Akila Surendran,<br> NISH<br></p>
 
                                         </div>
@@ -511,7 +511,7 @@
                                         </div>
 
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                                            <img src="images/committee/-G-Pillai.jpg" alt="" class="organizer">
+                                            <img src="images/committee/avatar.png" alt="" class="organizer">
                                             <p>Bijuna Kunju, TKMCE, Kollam<br></p>
 
                                         </div>
@@ -525,14 +525,14 @@
                                             <b>Hospitality Chairs</b> </li>
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 
-                                            <img src="images/committee/" alt="" class="organizer">
+                                            <img src="images/committee/avatar.png" alt="" class="organizer">
                                             <p>Thomas Sabu, Neo Green Labs<br></p>
 
                                         </div>
 
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 
-                                            <img src="images/committee/-.jpg" alt="" class="organizer">
+                                            <img src="images/committee/avatar.png" alt="" class="organizer">
                                             <p>Shankar J, UKFCE, Trivandrum<br></p>
 
                                         </div>
