--- a/committee.html
+++ b/committee.html
@@ -490,7 +490,7 @@
 
                                         <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
 
-                                            <img src="images/committee/avatar.png" alt="" class="organizer">
+                                            <img src="images/committee/Chris-Lee.jpg" alt="" class="organizer">
                                             <p>Chris GwoGiun Lee, National Cheng Kung University, Taiwan<br></p>
 
                                         </div>
