typos and new additions

--- a/itrack.html
+++ b/itrack.html
@@ -352,7 +352,7 @@
               <tr>
                 <td bgcolor="#ffaa5f"><b>Chair</b></td>
                 <td bgcolor="#ffdf7a"><a class="url" href="chrislee.html" target="_blank">Dr. Chris Gwo Giun Lee,
-                    <i>PProfessor, Cheng Kung Univ, R. O. C.</i></a></td>
+                    <i>Professor, Cheng Kung Univ, R. O. C.</i></a></td>
               </tr>
             </table>
 
