--- a/speakers.html
+++ b/speakers.html
@@ -275,7 +275,15 @@
                              University School of Professional Studies in its Executive M.S. in Technology Management
                              Program. Tony is an active a mentor and investor in the startup ecosystem, as Board member
                              in Corporates, an advisor and mentor to multiple Governments on IT, Start-up and Innovation
-                             policies.</p>
+                             policies.</p><br>
+                             <h3>Title: Sustainability with Digital Transformation</h3>
+
+
+                            <p align="justify"><b>Abstract:</b> With the vision of Zero Emission and Zero Fatality, Tony will share Nissan’s commitment to innovation for building a better future for the car buyers where cars are their partners, and drivers feel more confident and more connected.
+ 
+                                How digital transformation at Nissan is contributing majorly by converting these innovations and future technologies into a reality.
+                                
+                            </p>
                          <br>
                          <hr>
                          <br>
@@ -615,10 +623,15 @@
 
                                              <br>
 
-                                             <h3>Title: Connected Cars and Future</h3>
+                                             <h3>Title: Role and Future of Connected Cars in Mobility Revolution</h3>
 
 
-                                             <p align="justify"><b>Abstract:</b> TBA.</p>
+                                             <p align="justify"><b>Abstract:</b>
+                                                The future of mobility will clearly be more sustainable and more connected.<br>
+                                                Being at the forefront of the EV, Connected Cars & Autonomous Vehicle Technology, Nissan is poised to play a key role in shaping up the future of Mobility.
+                                                 <br>
+                                                Working on its roadmap- ‘Nissan Intelligent Mobility’, Bruno’s session will share how as a responsible car manufacturer Nissan is committed to making transportation safer, smarter, more enjoyable and more connected for a better future of the society.
+                                                </p>
                                              <br><br>
 
 
