--- a/committee.html
+++ b/committee.html
@@ -534,7 +534,7 @@
                                         <li><b>Registration Chairs</b></li>
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                             <img src="images/committee/Nandan.jpg" alt="" class="organizer">
-                                            <p>Nandan S, LBSCEW, Trivandrum<br></p>
+                                            <p>Nandan S, LBSITW, Trivandrum<br></p>
                                         </div>
 
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
