added favicon to all pages

--- a/committee.html
+++ b/committee.html
@@ -508,7 +508,7 @@
                                         </div>
                                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
 
-                                            <img src="images/committee/avatar.png" alt="" class="organizer">
+                                            <img src="images/committee/Takako_Hashimoto.jpg" alt="" class="organizer">
                                             <p>Takako Hashimoto, Chiba University of Commerce, Japan<br></p>
 
                                         </div>
