--- a/nissan.html
+++ b/nissan.html
@@ -103,7 +103,7 @@
 </li>
 <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 
-<li class="current dropdown"><a href="#">Tracks</a>
+<li class="current dropdown"><a href="#">Special Tracks</a>
 <ul>
 <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
 <li><a href="htrack.html">Humanitarian Activities Track</a></li>
@@ -200,7 +200,7 @@
     </header>
 
 <section class="services-style-one">
-        <div class="auto-container">
+        <div class="container">
             <div class="sec-title text-left">
 			                <h2>Cyber security -- panel discussion</h2><br>
 			<span class="left"><div style="float:left;">
