--- a/pingali.html
+++ b/pingali.html
@@ -200,7 +200,7 @@
     </header>
 
 <section class="services-style-one">
-        <div class="auto-container">
+        <div class="container">
             <div class="sec-title text-left">
 			                <h2>Keynote Speaker</h2><br>
 			<span class="left"><div style="float:left;">
