added program booklet and cisco logo

--- a/index.html
+++ b/index.html
@@ -456,22 +456,28 @@
                                 <img class="sponser-logo" src="./images/tpl.jpg" alt="tpl" style="height: 30px;">
                             </div>
                             <div class="col-md-4" style="padding-top:35px;">
-                                <img class="sponser-logo" src="./images/csl.jpg" alt="CSL" style="height: 80px;">
+                                <img class="sponser-logo" src="./images/cisco.png" alt="CISCO"
+                                    style="height: 70px;">
                             </div>
+                            
                             <div class="col-md-4" style="padding-top:35px;">
                                 <img class="sponser-logo" src="./images/oracle.png" alt="oracle" style="height: 80px;">
                             </div>
 
-                            <div class="col-md-4" style="padding-top:35px;">
+                            <div class="col-md-3" style="padding-top:35px;">
                                 <img class="sponser-logo" src="./images/InApp.png" alt="InApp" style="height: 80px;">
                             </div>
-                            <div class="col-md-4" style="padding-top:35px;">
+                            <div class="col-md-3" style="padding-top:35px;">
                                 <img class="sponser-logo" src="./images/IEEE.jpg" alt="IEEE" style="height: 80px;">
                             </div>
-                            <div class="col-md-4" style="padding-top:35px;">
+                            <div class="col-md-3" style="padding-top:35px;">
                                 <img class="sponser-logo" src="./images/NI_logo.jpg" alt="National Instruments"
                                     style="height: 80px;">
                             </div>
+                            <div class="col-md-3" style="padding-top:35px;">
+                                <img class="sponser-logo" src="./images/csl.jpg" alt="CSL" style="height: 80px;">
+                            </div>
+                            
                         </div>
                         <br>
                         <hr>
